--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "incenteev/composer-parameter-handler": "^2.1",
         "sensio/framework-extra-bundle": "^5.1",
+        "sonata-project/doctrine-orm-admin-bundle": "^3.10",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
