--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,16 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # --- Admin ---
+    admin.bank:
+        class: App\Admin\BankAdmin
+        arguments: [~, App\Entity\Bank, ~]
+        tags:
+            - { name: sonata.admin, manager_type: orm, label: Bank }
+
+    admin.tariff:
+        class: App\Admin\TariffAdmin
+        arguments: [~, App\Entity\Tariff, ~]
+        tags:
+            - { name: sonata.admin, manager_type: orm, label: Tariff }
