--- a/config/services.yaml
+++ b/config/services.yaml
@@ -52,18 +52,38 @@ services:
     # --- Adapter ---
 
     # --- Alfa Bank ---
+    App\Adapter\AlfaBank\AllNeedAdapter:
+        tags:
+            - { name: 'app.adapter', key: 'App\Adapter\AlfaBank\AllNeedAdapter' }
+
+    App\Adapter\AlfaBank\GoodChoiceAdapter:
+        tags:
+            - { name: 'app.adapter', key: 'App\Adapter\AlfaBank\GoodChoiceAdapter' }
+
+    App\Adapter\AlfaBank\OnStartAdapter:
+        tags:
+            - { name: 'app.adapter', key: 'App\Adapter\AlfaBank\OnStartAdapter' }
+
     App\Adapter\AlfaBank\SimpleOneAdapter:
         tags:
             - { name: 'app.adapter', key: 'App\Adapter\AlfaBank\SimpleOneAdapter' }
 
+    App\Adapter\AlfaBank\VEDAdapter:
+        tags:
+            - { name: 'app.adapter', key: 'App\Adapter\AlfaBank\VEDAdapter' }
+
     # --- Open ---
+    App\Adapter\Open\FastGrowAdapter:
+        tags:
+            - { name: 'app.adapter', key: 'App\Adapter\Open\FastGrowAdapter' }
+
     App\Adapter\Open\FirstStepAdapter:
         tags:
             - { name: 'app.adapter', key: 'App\Adapter\Open\FirstStepAdapter' }
 
-    App\Adapter\Open\FastGrowAdapter:
+    App\Adapter\Open\OpenOpportunitiesAdapter:
         tags:
-            - { name: 'app.adapter', key: 'App\Adapter\Open\FastGrowAdapter' }
+            - { name: 'app.adapter', key: 'App\Adapter\Open\OpenOpportunitiesAdapter' }
 
     App\Adapter\Open\OwnBusinessAdapter:
         tags:
@@ -72,7 +92,3 @@ services:
     App\Adapter\Open\WholeWorldAdapter:
         tags:
             - { name: 'app.adapter', key: 'App\Adapter\Open\WholeWorldAdapter' }
-
-    App\Adapter\Open\OpenOpportunitiesAdapter:
-        tags:
-            - { name: 'app.adapter', key: 'App\Adapter\Open\OpenOpportunitiesAdapter' }
