--- a/config/packages/test/parameters.yaml
+++ b/config/packages/test/parameters.yaml
@@ -1,2 +1,2 @@
 parameters:
-  database.url: mysql://jokly:zM3ad8wVQVmZqBHr@database:3306/eukariot
+  database.url: mysql://lynx:zM3ad8wVQVmZqBHr@database:3306/sberbank_profile
